# illimat

./: .gitignore  ILLIMAT.md  Illimat.sln
Illimat.Core/: Card.cs  Deck.cs  Field.cs  Game.cs  GameState.cs  Luminary.cs  Okus.cs  Pile.cs  Player.cs
Illimat.Core.Tests/: UnitTest1.cs
Illimat.Core/Actions/: BeginTurn.cs  ChangeSeason.cs  CollectLuminary.cs  CollectOkus.cs  DealHand.cs  DealLuminary.cs  DiscardLuminary.cs  DrawUp.cs  EndTurn.cs  ExchangeCard.cs  GiveCardFromHarvestPile.cs  HarvestCards.cs  InitialDeal.cs  PlaceOkus.cs  RevealLuminary.cs  ScoreRound.cs  SeedField.cs  SowCard.cs  StealCardFromHand.cs  StealOkus.cs  StockpileCards.cs
Illimat.Core/Extensions/: CardExtensions.cs  IActorExtensions.cs  IEnumerableExtensions.cs  IListExtensions.cs  LuminaryExtensions.cs  LuminaryNameExtensions.cs  RankExtensions.cs  SuitExtensions.cs
Illimat.Core/Models/: IAction.cs  IActor.cs  ICard.cs  IPromptableAction.cs  LuminaryName.cs  LuminarySet.cs  Rank.cs  (+6 more)
backend/: Cargo.toml  test_console_fix.txt
backend/benches/: bitset_benchmarks.rs  game_benchmarks.rs  mcts_performance.rs  memory_profiling.rs
backend/proptest-regressions/game/: bitset.txt
backend/src/: lib.rs  wasm_interface.rs
backend/src/game/: actions.rs  bitset.rs  capabilities.rs  card.rs  compact_state.rs  comprehensive_rules_tests.rs  core_rules_tests.rs  debug_cards.rs  display.rs  field_id.rs  game_config.rs  luminary.rs  luminary_effects.rs  luminary_manager.rs  luminary_tests.rs  mcts.rs  mcts_performance_test.rs  mcts_reality_check.rs  mcts_tree_analysis.rs  mcts_tree_scaling.rs  mod.rs  okus.rs  player.rs  scoring.rs  season.rs  simd_compact_integration.rs  simd_optimizations.rs  simple_cpu.rs  state.rs  state_old.rs  stockpile.rs  turn_manager.rs  types.rs  zero_copy.rs
backend/tests/: console_automation_tests.rs  dealing_rules_test.rs  field_clearing_okus_test.rs  harvest_fix_simple_test.rs  integration_tests.rs  simple_cpu_integration_test.rs  ticket_bug_001_verification.rs  ticket_bug_004_draw_back_test.rs
web/: cypress.config.js  illimat-game-view-poc.html  index.html  package.json  test-integration.html  test-wasm-loading.js  vite.config.js
(+30 files in other folders)
