[package]
name = "illimat-mcts"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
arrayvec = "0.7"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.0"
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
dhat = "0.3"
pprof = { version = "0.13", features = ["criterion", "protobuf-codec"] }

[[bin]]
name = "console"
path = "src/bin/console.rs"

[lib]
name = "illimat_core"
path = "src/lib.rs"

[[bench]]
name = "game_benchmarks"
harness = false