[package]
name = "illimat-mcts"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
arrayvec = "0.7"
colored = "2.0"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }
js-sys = "0.3"
wee_alloc = { version = "0.4", optional = true }
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = { version = "0.1", optional = true }
fastrand = "2.0"

[dev-dependencies]
proptest = "1.0"
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
dhat = "0.3"
pprof = { version = "0.13", features = ["criterion", "protobuf-codec"] }

[[bin]]
name = "console"
path = "src/bin/console.rs"

[lib]
name = "illimat_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "game_benchmarks"
harness = false

[[bench]]
name = "bitset_benchmarks"
harness = false

[features]
default = []
wee_alloc = ["dep:wee_alloc"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
wasm-safe = []  # Simplified WASM-safe MCTS implementation
debug-selection = []  # Enable only MCTS selection phase
debug-expansion = []  # Enable selection + expansion phases
debug-simulation = []  # Enable selection + expansion + simulation phases